--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
 		"lenis": "^1.3.3",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-i18next": "^15.5.1",
+		"react-i18next": "^15.5.2",
 		"tailwindcss": "^4.1.7"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
+		"@biomejs/biome": "2.0.0-beta.5",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/node": "22.15.21",
-		"@types/react": "^19.1.4",
+		"@types/react": "^19.1.5",
 		"@types/react-dom": "^19.1.5",
-		"@vitejs/plugin-react-swc": "^3.9.0",
-		"daisyui": "^5.0.35",
+		"@vitejs/plugin-react-swc": "^3.10.0",
+		"daisyui": "^5.0.37",
 		"globals": "^16.1.0",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.32.1",
