--- a/package.json
+++ b/package.json
@@ -10,26 +10,28 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"gsap": "^3.13.0",
 		"@gsap/react": "^2.1.2",
-		"i18next": "^25.2.0",
+		"gsap": "^3.13.0",
+		"i18next": "^25.2.1",
 		"i18next-browser-languagedetector": "^8.1.0",
 		"i18next-http-backend": "^3.0.2",
 		"lenis": "^1.3.3",
+		"lucide-react": "^0.511.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-i18next": "^15.5.2",
-		"tailwindcss": "^4.1.7"
+		"tailwindcss": "^4.1.7",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.0-beta.5",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/node": "22.15.21",
-		"@types/react": "^19.1.5",
+		"@types/react": "^19.1.6",
 		"@types/react-dom": "^19.1.5",
 		"@vitejs/plugin-react-swc": "^3.10.0",
-		"daisyui": "^5.0.37",
-		"globals": "^16.1.0",
+		"daisyui": "^5.0.38",
+		"globals": "^16.2.0",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.32.1",
 		"unocss": "^66.1.2",
