--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+		"preview": "vite preview",
 		"build": "tsc -b && vite build",
-		"lint": "eslint .",
-		"preview": "vite preview"
+		"format": "biome format --write ."
 	},
 	"dependencies": {
 		"@gsap/react": "^2.1.2",
@@ -26,14 +26,13 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.0.0-beta.5",
 		"@tailwindcss/vite": "^4.1.7",
-		"@types/node": "22.15.21",
+		"@types/node": "22.15.23",
 		"@types/react": "^19.1.6",
 		"@types/react-dom": "^19.1.5",
 		"@vitejs/plugin-react-swc": "^3.10.0",
 		"daisyui": "^5.0.38",
 		"globals": "^16.2.0",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.32.1",
 		"unocss": "^66.1.2",
 		"vite": "^6.3.5"
 	}
