--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"preview": "vite preview",
-		"build": "tsc -b && vite build",
+		"build": "vite build",
 		"format": "biome format --write ."
 	},
 	"dependencies": {
