--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
 		"format": "biome format --write ."
 	},
 	"dependencies": {
-		"@gsap/react": "^2.1.2",
 		"gsap": "^3.13.0",
 		"i18next": "^25.2.1",
 		"i18next-browser-languagedetector": "^8.1.0",
@@ -19,20 +18,18 @@
 		"lucide-react": "^0.511.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-i18next": "^15.5.2",
-		"tailwindcss": "^4.1.8",
-		"tailwindcss-animate": "^1.0.7"
+		"react-i18next": "^15.5.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.0-beta.5",
+		"tailwindcss": "^4.1.8",
 		"@tailwindcss/vite": "^4.1.8",
+		"tailwindcss-animate": "^1.0.7",
 		"@types/node": "22.15.24",
 		"@types/react": "^19.1.6",
 		"@types/react-dom": "^19.1.5",
 		"@vitejs/plugin-react-swc": "^3.10.0",
-		"globals": "^16.2.0",
 		"typescript": "^5.8.3",
-		"unocss": "^66.1.2",
 		"vite": "^6.3.5"
 	}
 }
