--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
 	"dependencies": {
 		"gsap": "^3.13.0",
 		"i18next": "^25.2.1",
-		"i18next-browser-languagedetector": "^8.1.0",
+		"i18next-browser-languagedetector": "^8.2.0",
 		"i18next-http-backend": "^3.0.2",
 		"lenis": "^1.3.4",
-		"lucide-react": "^0.513.0",
+		"lucide-react": "^0.516.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-i18next": "^15.5.2"
+		"react-i18next": "^15.5.3"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.0.0-beta.6",
-		"tailwindcss": "^4.1.8",
-		"@tailwindcss/vite": "^4.1.8",
+		"@biomejs/biome": "2.0.0",
+		"tailwindcss": "^4.1.10",
+		"@tailwindcss/vite": "^4.1.10",
 		"tailwindcss-animate": "^1.0.7",
-		"@types/node": "22.15.30",
-		"@types/react": "^19.1.6",
+		"@types/node": "24.0.3",
+		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
-		"@vitejs/plugin-react-swc": "^3.10.1",
+		"@vitejs/plugin-react-swc": "^3.10.2",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.5"
 	}
