--- a/package.json
+++ b/package.json
@@ -7,29 +7,30 @@
 		"dev": "vite",
 		"preview": "vite preview",
 		"build": "vite build",
-		"format": "biome format --write ."
+		"format": "biome format --write .",
+		"lint": "biome lint"
 	},
 	"dependencies": {
-		"gsap": "^3.13.0",
-		"i18next": "^25.3.2",
+		"gsap": "^3.14.1",
+		"i18next": "^25.7.2",
 		"i18next-browser-languagedetector": "^8.2.0",
 		"i18next-http-backend": "^3.0.2",
-		"lenis": "^1.3.8",
-		"lucide-react": "^0.526.0",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"react-i18next": "^15.6.1"
+		"lenis": "^1.3.15",
+		"lucide-react": "^0.556.0",
+		"react": "^19.2.1",
+		"react-dom": "^19.2.1",
+		"react-i18next": "^16.4.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.1.2",
-		"tailwindcss": "^4.1.11",
-		"@tailwindcss/vite": "^4.1.11",
+		"@biomejs/biome": "2.3.8",
+		"tailwindcss": "^4.1.17",
+		"@tailwindcss/vite": "^4.1.17",
 		"tailwindcss-animate": "^1.0.7",
-		"@types/node": "24.1.0",
-		"@types/react": "^19.1.8",
-		"@types/react-dom": "^19.1.6",
-		"@vitejs/plugin-react-swc": "^3.11.0",
-		"typescript": "^5.8.3",
-		"vite": "^7.0.6"
+		"@types/node": "24.10.2",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"@vitejs/plugin-react-swc": "^4.2.2",
+		"typescript": "^5.9.3",
+		"vite": "^7.2.7"
 	}
 }
